--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Amit's Personal Site</title>
+
+    <style media="screen">
+
+    body {
+      background-color:#005A8D;
+    }
+
+    hr {
+      background-color: inherit;
+      height: 2px;
+      width: 5%;
+      border: dotted white;
+      border-width: 0 0 8px 0;
+    }
+
+    </style>
   </head>
   <body>
     <table cellspacing = "20">
@@ -71,3 +87,4 @@
     <a href="Contact.html">Contact Me</a>
   </body>
 </html>
+
