--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <hr>
 
     <a href="hobbies.html">My Hobbies</a><br>
-    <a href="Contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a>
   </body>
 </html>
 
